feat: add multiple dtos and useActiveProfileId hook
